--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "dotenv>=0.9.9",
     "google-genai>=1.52.0",
+    "pinecone>=8.0.0",
     "pymupdf>=1.26.6",
     "rich>=14.2.0",
     "sentence-transformers>=5.1.2",
