--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,18 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "bs4>=0.0.2",
+    "datasets>=4.4.1",
     "dotenv>=0.9.9",
     "google-genai>=1.52.0",
+    "google-generativeai>=0.8.5",
     "pinecone>=8.0.0",
+    "pydub>=0.25.1",
     "pymupdf>=1.26.6",
     "rich>=14.2.0",
     "sentence-transformers>=5.1.2",
+    "sentencepiece>=0.2.1",
     "sounddevice>=0.5.3",
+    "soundfile>=0.13.1",
     "speechrecognition>=3.14.4",
 ]
