--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "gtts",
     "numpy>=2.3.5",
     "pinecone>=8.0.0",
-    "playsound",
+    "playsound==1.2.2",
     "pydub>=0.25.1",
     "pymupdf>=1.26.6",
     "python-dotenv>=1.2.1",
